--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite",
-        "build:filament": "npx tailwindcss -c tailwind3.config.js -i ./resources/css/filament-tailwind3.css -o public/css/filament-tailwind3.css --minify"
+        "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
