--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^3.4.3",
+        "tailwindcss": "^3.4.17",
         "vite": "^6.2.4"
     }
 }
