--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^3.4.3",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "postcss-import": "^16.1.0"
     }
 }
