--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^3.4.3",
-        "vite": "^6.2.4"
+        "vite": "^6.2.4",
+        "autoprefixer": "^10.4.19",
+        "postcss-import": "^16.1.0"        
     },
     "dependencies": {
         "postcss-import": "^16.1.0"
